fixed alignment issues in dashboard component

--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 25px;
+    margin: 10px;
     padding: 1rem;
     background-color: white;
-    height: calc(100vh - 50px);
+    height: calc(100vh - 20px);
     border-radius: 20px;
     
 }
