--- a/src/styles/dashboardStyles/activityFeed.css
+++ b/src/styles/dashboardStyles/activityFeed.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px;
+    padding: 25px  ;
     border-radius: 20px;
     color: #bdc3c5;
     font-weight: bold;
@@ -14,13 +14,14 @@
     background-color: #F7FBFF;
     margin-left: 40px;
     margin-right: 40px;
-    margin-top: 30px;
-    height: 20vh;
+    margin-top: 25px;
+    height: 21vh;
+    border-radius: 20px;
 }
 
 .activity-title
 {
-    font-size: 20px;
+    font-size: large;
     color: #2c3e50;
     font-size: larger;
 }
@@ -31,7 +32,7 @@
     justify-content: space-around;
     color: #bdc3c5;
     margin: auto;
-    padding: 20px;
+    padding: 20px 20px 25px 20px;
     list-style: none;
     
 }
