--- a/src/styles/dashboardStyles/anatomySection.css
+++ b/src/styles/dashboardStyles/anatomySection.css
@@ -8,6 +8,7 @@
     border-radius: 20px;
     position: relative; 
     height: 50vh;
+    margin-top: 40px;
 }
 
 .anatomy-image {
@@ -37,6 +38,7 @@
     white-space: nowrap; 
     left: 265px;
     top: 100px;
+    padding: 10px 0 10px 0;
 
 }
 
@@ -54,12 +56,13 @@
     white-space: nowrap; 
     bottom: 115px;
     right: 245px;
+    padding: 10px 0 10px 0;
 
     
 }
 
 .legicon
 {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
 }
