--- a/src/styles/dashboardStyles/progressbar.css
+++ b/src/styles/dashboardStyles/progressbar.css
@@ -3,8 +3,9 @@
     background-color: #DCE0E8;
     border-radius:10px;
     overflow: hidden;
-    height: 100px ;
+    height: 60% ;
     margin-top: -15px;
+    margin-left: 10px;
     
   }
 
@@ -13,4 +14,5 @@
     width: 70%;
     height: 100%;
     transition: width 0.3s ease-in-out;
+    
   }
