--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -69,3 +69,7 @@
 .tools{
     margin-top: 50px;
 }
+
+.general{
+    margin-top: 30px;
+}
